tests/good/simple20.tig
var x := 1
var y := (1; 1/x)