tests/bad/simple17.tig
var x := 2
var y := (x := x-1; 1) & (x := x-1; 0)
var z := 1/x